--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,6 @@
-pool: MyAgentPool
-steps:
-- bash: echo hello world
+- task: DotNetCoreCLI@2
+  displyaName: 'Build the project'
+  inputs:
+    command: 'build'
+    projects: '''**/*.csproj'''
+    arguments: '''--no-restore --configuration Release'''
