Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,6 @@
-- task: DotNetCoreCLI@2
-  displyaName: 'Build the project'
+task: DotNetCoreCLI@2
+  displayName: 'Build the project'
   inputs:
     command: 'build'
-    projects: '''**/*.csproj'''
-    arguments: '''--no-restore --configuration Release'''
+    arguments: '--no-restore --configuration Release'
+    projects: '**/*.csproj'
