--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,6 @@
-task: DotNetCoreCLI@2
-  displayName: 'Build the project'
+- task: DotNetCoreCLI@2
+  displayName: 'Build project'
   inputs:
     command: 'build'
-    arguments: '--no-restore --configuration Release'
     projects: '**/*.csproj'
+    arguments: '--no-restore --configuration Release'
